<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.impulsevid.x00075294.impulsevideo.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- UserName Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/input_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLength="32" />
        </android.support.design.widget.TextInputLayout>
        <!-- Location Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/input_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/location"
                android:inputType="text"
                android:maxLength="32" />
        </android.support.design.widget.TextInputLayout>
        <!-- Location Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/input_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/bio"
                android:inputType="text"
                android:maxLength="254" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_edit"
            android:shadowColor="@color/accent"
            android:text="@string/update_profile"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            android:textStyle="normal|bold" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
